<resources>
    <string name="app_name">AR-Navigation</string>
    <string name="fab_add_descr">FAB to add a place</string>
    <string name="fab_route_descr">FAB to launch maps route</string>
    <string name="fab_my_location_descr">"FAB Find my location "</string>
    <string name="fab_search_desrc">FAB to preview anchors in AR</string>
    <string name="input_name_hint">Name:</string>
    <string name="input_description_hint">Description:</string>
    <string name="input_lat_hint">Latitude:</string>
    <string name="input_lng_hint">Longitude:</string>
    <string name="input_author_hint">Author:</string>
    <string name="error_cannot_be_empty">Cannot be empty</string>
    <string name="button_update_place">Update</string>
    <string name="button_upload_place">Upload</string>
    <string name="button_delete_place">Delete</string>
    <string name="select_position_title">Anchor</string>
    <string name="permissions_rationale">Permissions are required for this app to be used</string>
    <string name="camera_rationale">This app requires the Camera permission to be used</string>
    <string name="location_rationale">This app requires the Location permission to be used</string>
    <string name="route_dialog_title">Do you want to start the AR-Navigation?</string>
    <string name="button_edit_ar_data">Redo Route</string>
    <string name="button_cancel_and_redo_ar">Cancel &amp; Redo</string>
    <string name="button_try_ar_route">Try route</string>

    <string name="geospatial_pose" translatable="false">Camera: LAT/LNG: %.6f˚, %.6f˚\t\t\tACC: %.2fm\nALTITUDE: %.2fm\t\t\tACC: %.2fm\nHEADING: %.1f˚\t\t\tACC: %.1f˚</string>
    <string name="geospatial_anchor" translatable="false">\nAnchor: LAT/LNG: %.6f˚, %.6f˚\t\t\tALTITUDE: %.2fm\nBEARING: %.1f˚\t\t\tDISTANCE: %.2fm</string>
    <string name="input_alt_hint">Altitude:</string>
    <string name="input_hdg_hint">Heading:</string>
    <string name="button_resolve">RESOLVE</string>
    <string name="button_place">PLACE</string>
    <string name="button_confirm">CONFIRM</string>
    <string name="btn_clear">CLEAR</string>
    <string name="btn_undo">UNDO</string>
    <string name="btn_place">PLACE</string>
    <string name="btn_confirm">CONFIRM</string>
    <string name="btn_resolve">RESOLVE</string>
    <string name="btn_hosting">HOSTING</string>
</resources>