<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/map_my_location_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/fab_my_location_descr"
            android:elevation="0dp"
            map:borderWidth="0dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/map_ar_search_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/fab_search_desrc"
            android:elevation="0dp"
            android:src="@drawable/ic_baseline_view_in_ar_24"
            map:borderWidth="0dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/map_add_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/fab_add_descr"
            android:elevation="0dp"
            android:src="@drawable/ic_baseline_add_location_alt_24"
            map:borderWidth="0dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/map_route_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/fab_route_descr"
            android:elevation="0dp"
            android:src="@drawable/ic_baseline_directions_24"
            android:visibility="gone"
            map:borderWidth="0dp" />

    </LinearLayout>


</FrameLayout>