<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_name_hint"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_description_hint"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_author_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_author_hint"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_description_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/layout_ar_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_author_layout">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/squared"
            android:text="AR-Route:"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/check_has_as_route"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_check_box_outline_blank_48" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_input_ardata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/button_cancel_and_redo_ar" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_try_ar_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_try_ar_route"
            android:visibility="gone" />


    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_lat_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:enabled="false"
        android:hint="@string/input_lat_hint"
        app:layout_constraintEnd_toStartOf="@id/input_lng_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_ar_data">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_lat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_lng_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:enabled="false"
        android:hint="@string/input_lng_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/input_lat_layout"
        app:layout_constraintTop_toBottomOf="@id/layout_ar_data">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_lng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_alt_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:enabled="false"
        android:hint="@string/input_alt_hint"
        app:layout_constraintEnd_toStartOf="@id/input_hdg_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_lat_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_alt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_hdg_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:enabled="false"
        android:hint="@string/input_hdg_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/input_alt_layout"
        app:layout_constraintTop_toBottomOf="@id/input_lng_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_hdg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map_pick_location"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/button_create"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_alt_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_delete"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:text="@string/button_delete_place"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_create" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_create"
        android:layout_width="160dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_delete"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>